closes #32938 center layout @0.3

--- a/app/src/main/res/layout/activity_gamestart.xml
+++ b/app/src/main/res/layout/activity_gamestart.xml
@@ -6,42 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".GameStartActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
-        android:text="Welcome to Encore!"
-        app:layout_constraintBottom_toTopOf="@+id/playgroundInput"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewGameStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="180dp"
-        android:minHeight="48dp"
-        android:onClick="onClickGamestart"
-        android:text="Game Start!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playgroundInput"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="328dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Welcome to Encore!"
+            app:layout_constraintBottom_toTopOf="@+id/playgroundInput" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/playgroundInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="304dp"
-        android:layout_marginBottom="228dp"
-        android:hint="setPlayground"
-        android:minHeight="48dp"
-        android:textColorHint="#757575"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="TextContrastCheck" />
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/playgroundInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="setPlayground"
+            android:minHeight="48dp"
+            android:textColorHint="#757575"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/textViewGameStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="onClickGamestart"
+            android:text="Game Start!" />
+
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
