refs #32935 got to next activity after start and create new Playgroud class @1

--- a/app/src/main/res/layout/activity_gamestart.xml
+++ b/app/src/main/res/layout/activity_gamestart.xml
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="TextContrastCheck" />
 
-        <TextView
+        <Button
             android:id="@+id/textViewGameStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
