--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -3,13 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:id="@+id/gridview_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="12dp">
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <GridLayout
         android:id="@+id/playground_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00ff00"
-        android:rowCount="2"
-        android:columnCount="2">
-    </GridLayout>
+        android:layout_marginTop="16dp"
+        android:horizontalSpacing="12dp"
+        android:verticalSpacing="12dp"
+        android:gravity="center"
+        android:numColumns="2"></GridLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
