--- a/app/src/main/res/layout/activity_gamestart.xml
+++ b/app/src/main/res/layout/activity_gamestart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".start.GameStartActivity">
+    tools:context=".start_screen.view.GameStartActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             tools:ignore="TextContrastCheck" />
 
         <Button
-            android:id="@+id/textViewGameStart"
+            android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
