--- a/app/src/main/res/layout/activity_gamestart.xml
+++ b/app/src/main/res/layout/activity_gamestart.xml
@@ -30,6 +30,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:hint="setPlayground"
+            android:text="ggGyyyygboboyyy,ogygyyoogbboogg,bgrggggrRryyogg,brrgoobbggYyorb,roOoorbbooorrrr,rBbrrrryyorbbbo,yybbbbryyygggog"
             android:minHeight="48dp"
             android:textColorHint="#757575"
             app:layout_constraintBottom_toBottomOf="parent"
