--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="PlaygroundRow">15</integer>
     <integer name="PlaygroundCol">7</integer>
+    <integer name="ButtonSize">80</integer>
 </resources>
