--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,4 +3,5 @@
     <integer name="PlaygroundRow">15</integer>
     <integer name="PlaygroundCol">7</integer>
     <integer name="ButtonSize">80</integer>
+    <integer name="ButtonSizeLayoutParam">90</integer>
 </resources>
