closes #36340 @0.5 create nextRound button in xml and creates after push a new round

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     android:largeHeap="true">
 
+    <ImageButton
+        android:id="@+id/nextRound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onNextRound"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_media_play" />
+
     <TextView
         android:id="@+id/currentRoundView"
         android:layout_width="wrap_content"
