--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="-680dp"
         android:layout_weight="1"
-        android:text="Round : 0"
+        android:text="Runde : 0"
         android:textSize="32sp"
         app:layout_constraintEnd_toStartOf="parent" />
 
