fixes #35764 @0.5 change design and xml arrange

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -16,30 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_media_play" />
 
-    <ImageView
-        android:id="@+id/DiceOne"
-        android:layout_width="20pt"
-        android:layout_height="20pt"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/nextRound"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentRoundView"
-        app:layout_constraintVertical_bias="0.066" />
-    <ImageView
-        android:id="@+id/DiceTwo"
-        android:layout_width="20pt"
-        android:layout_height="20pt"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DiceOne" />
 
-    <ImageView
-        android:id="@+id/DiceThree"
-        android:layout_width="20pt"
-        android:layout_height="20pt"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DiceTwo" />
     <ImageView
         android:id="@+id/ColorOne"
         android:layout_width="20pt"
@@ -64,17 +41,52 @@
         android:layout_marginEnd="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ColorTwo" />
+    <ImageView
+        android:id="@+id/DiceOne"
+        android:layout_width="20pt"
+        android:layout_height="20pt"
+        android:layout_marginEnd="80dp"
+        app:layout_constraintBottom_toTopOf="@+id/nextRound"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currentRoundView"
+        app:layout_constraintVertical_bias="0.066" />
+    <ImageView
+        android:id="@+id/DiceTwo"
+        android:layout_width="20pt"
+        android:layout_height="20pt"
+        android:layout_marginEnd="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/DiceOne" />
 
+    <ImageView
+        android:id="@+id/DiceThree"
+        android:layout_width="20pt"
+        android:layout_height="20pt"
+        android:layout_marginEnd="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/DiceTwo" />
+
+
+    <ImageView
+        android:id="@+id/roundNote"
+        android:layout_width="148dp"
+        android:layout_height="120dp"
+        android:layout_marginEnd="-5dp"
+        android:layout_marginBottom="50dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toTopOf="@+id/ColorTwo"
+        app:layout_constraintEnd_toEndOf="@+id/currentRoundView"
+        app:layout_constraintTop_toTopOf="@+id/currentRoundView" />
 
     <TextView
         android:id="@+id/currentRoundView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="-680dp"
+        android:layout_width="128dp"
+        android:layout_height="41dp"
         android:layout_weight="1"
         android:text="Runde : 0"
-        android:textSize="32sp"
-        app:layout_constraintEnd_toStartOf="parent" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout" />
 
     <LinearLayout
         android:id="@+id/verticaLayout"
@@ -93,7 +105,9 @@
         android:orientation="horizontal"
         android:translationX="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="564dp"
