--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -113,7 +113,8 @@
         android:id="@+id/horizontalPointLayout"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginLeft="12dp"
         android:orientation="horizontal"
         android:translationX="10dp"
         app:layout_constraintStart_toStartOf="parent"
