--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,11 +54,31 @@
             android:text="Spiel Starten!"
             android:textAllCaps="false"
             android:textColor="#FFFBF6" />
+
+        <Button
+            android:id="@+id/serverButton"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/customloginbutton"
+            android:onClick="onServerStart"
+            android:text="Server Starten!"
+            android:textAllCaps="false"
+            android:textColor="#FFFBF6" />
         <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:background="#3fff"
             android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/serverInfoView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#03A9F4"
+            android:text="Online Server : offline"
+            android:textColor="#D62C2C"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
