--- a/app/src/main/res/layout/dialog_prompt.xml
+++ b/app/src/main/res/layout/dialog_prompt.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+    <EditText
+        android:id="@+id/layoutText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="ggGyyyyGboboyyy\nogygyyoogbboogg\nbgrggggrRryyogg\nbrrgoobbggYyorb\nroOoorbbooorrrr\nrBbrrrryyorbbbo\nyybbbbryyygggog"
+        android:hint="layout" />
     <EditText
         android:id="@+id/portText"
         android:inputType="textEmailAddress"
